gitops/platform/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: platform-system
spec:
  gatewayClassName: platform-eg

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.lab.local"

      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: "true"

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.lab.local"

      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: lab-local-wildcard-tls

      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: "true"
