gitops/platform/prometheus-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-agent
  namespace: monitoring
spec:
  parentRefs:
    - name: platform-gateway
      namespace: platform-system
      sectionName: http
  hostnames:
    - prometheus.lab.local
  rules:
    - backendRefs:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: platform-gateway
      namespace: platform-system
      sectionName: https
  hostnames:
    - prometheus.lab.local
  rules:
    - backendRefs:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
